# finn-deals

./: .gitignore  README.md  pyproject.toml  requirements.txt
finn_deals/: dataset.py  features.py
finn_deals/modeling/: eval.py  nn.py  train.py  utils.py
finn_deals/scraping/: finn.py  finn2.py  finn_refactor.py  finn_scraper.py  parse_utils.py
notebooks/: eda.ipynb  eda_gitar.ipynb  ml-model-v2.ipynb  noe.ipynb  testing.ipynb
tests/finn_deals/: test_dataset.py  test_features.py
tests/finn_deals/modeling/: test_eval.py  test_train.py
tests/finn_deals/scraping/: test_finn.py
